--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header style="text: center;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-    <img src="afbeeldingen/Foto_header.jpg" alt="kerst" height="300" width="500px">
+    <img src="Foto_header.jpg" alt="kerst" height="300" width="500px">
     <a class="navbar-brand" href="#"><h1>Home</h1></a>
   <p>
     <a class="navbar-brand" href="recepten.html"><h1>Kerst recepten</h1></a>
@@ -23,7 +23,7 @@
   <p>
     <a class="navbar-brand" href="Wens.html"><h1>Kerst wens</h1></a>
   </p>
-    <img src="afbeeldingen/Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
+    <img src="Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
   </header>
 
   <!--Window.alert, fijne kerstdagen en een voorspoedig nieuwjaar-->
@@ -45,7 +45,7 @@ window.alert("Fijne kerstdagen en een voorspoedig nieuwjaar");
       5 The holiday <br>
       </div>
       <div class="col-5">
-        <img src="afbeeldingen/Kerstbal_merry_christmas.jpg" alt="Kerstbal_merry_christmas" height="300" width="400px">
+        <img src="Kerstbal_merry_christmas.jpg" alt="Kerstbal_merry_christmas" height="300" width="400px">
       </div>
       <div class="col-3"><u>5 leuke spellen voor tijdens de kerstdagen</u> <br>
         1 Kolonisten van catan <br>
