--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="navbar-brand" href="recepten.html"><h1>Kerst recepten</h1></a>
   </p>
   <p>
-    <a class="navbar-brand" href="Wens.html"><h1>Kerst wens</h1></a>
+    <a class="navbar-brand" href="wens.html"><h1>Kerst wens</h1></a>
   </p>
     <img src="Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
   </header>
