--- a/recepten.html
+++ b/recepten.html
@@ -15,15 +15,15 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-    <img src="afbeeldingen/Foto_header.jpg" alt="kerst" height="300" width="500px">
+    <img src="Foto_header.jpg" alt="kerst" height="300" width="500px">
     <p>
     <a class="navbar-brand" href="index.html"><h1>Home</h1></a>
   </P>
     <a class="navbar-brand" href="#"><h1>Kerst recepten</h1></a>
   <p>
-    <a class="navbar-brand" href="Wens.html"><h1>Kerst wens</h1></a>
+    <a class="navbar-brand" href="wens.html"><h1>Kerst wens</h1></a>
   </p>
-    <img src="afbeeldingen/Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
+    <img src="Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
   </header>
 </head>
 
@@ -84,7 +84,7 @@
       * Laat de icing goed hard worden, dit duurt ca, 15 minuten. Bewaar de koekjes in een afgesloten trommel maximaal ca. 4 dagen dagen. <br>
       * Tip: Maak een gaatje in het midden van het koekjes om er een lintje door te doen om in de kerstboom te hangen. <br>
 </p>
-<img src="Afbeeldingen/kerstkoekjes.jpg" alt="Soesjes toren" heigth="200px" width="500px">
+<img src="kerstkoekjes.jpg" alt="Soesjes toren" heigth="200px" width="500px">
 <p>
 &copy;<a href="https://www.leukerecepten.nl/recepten/kerstkoekjes-maken/">Bron</a>
 </p>
@@ -112,7 +112,7 @@
       * Stop er de schijfjes aardbei tussen wanneer de chocolade nog een beetje nat is. <br>
       * Laat de chocolade helemaal uitharden. Zeef ten slotte wat poedersuiker over de soesjestoren. <br>
     </p>
-      <img src="Afbeeldingen/soesjestoren.png" alt="Soesjes toren" heigth="300" width="500">
+      <img src="Soesjestoren.png" alt="Soesjes toren" heigth="300" width="500">
       <p>
       &copy;<a href="https://www.aldi.nl/recepten/feestrecepten/makkelijke-soesjestoren-met-melkchocolade-en-aardbeien.html">Bron</a>
     </p>
@@ -139,7 +139,7 @@
       * Neem er 8 kleine glaasjes bij en verdeel de mousse over deze glaasjes. Laat een paar uur opstijven in de koelkast. Maak vlak voor
       het serveren af met de verkruimelde speculaaskoekjes. <br>
     </p>
-    <img src="Afbeeldingen/speculaasmousse.png" alt="Speculaasmousse" heigth="300" width="500">
+    <img src="speculaasmousse.png" alt="Speculaasmousse" heigth="300" width="500">
     <p>
     &copy;<a href="https://www.aldi.nl/recepten/feestrecepten/speculaasmousse-met-kaneel.html">Bron</a>
   </p>
