--- a/wens.html
+++ b/wens.html
@@ -15,7 +15,7 @@
   <header style="text: center;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-    <img src="afbeeldingen/Foto_header.jpg" alt="kerst" height="300" width="500px">
+    <img src="Foto_header.jpg" alt="kerst" height="300" width="500px">
     <p>
     <a class="navbar-brand" href="index.html"><h1>Home</h1></a>
   </P>
@@ -23,7 +23,7 @@
     <a class="navbar-brand" href="recepten.html"><h1>Kerst recepten</h1></a>
   </p>
     <a class="navbar-brand" href="#"><h1>Kerst wens</h1></a>
-  <img src="afbeeldingen/Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
+  <img src="Kersthanger.jpg" alt="versierde kerstboom" height="300" width="500px">
   </header>
   </head>
 
@@ -41,7 +41,7 @@
       <div class="col-4"></div>
     </div>
   </div>
-    <img id="Foto_2022" src="afbeeldingen/Foto_2022.jpg" alt="foto 2022" height="400" width="500px" align="center">
+    <img id="Foto_2022" src="Foto_2022.jpg" alt="foto 2022" height="400" width="500px" align="center">
 
 
   <noscript>
